# FetchContentXercesC

./: CMakeLists.txt  main.cpp  readme.md
